--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -6,5 +6,22 @@ html,
 body {
   width: 100%;
   height: 100%;
-  background-color: rgb(247, 248, 250);
+  background-color: #e3e3e3;
+}
+
+.bg-grey {
+  background-color: #f4f4f4;
+}
+
+
+.pdp-image-container {
+  .expand-btn {
+    display: none;
+  }
+
+  &:hover {
+    .expand-btn {
+      display: block;
+    }
+  }
 }
