--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,5 +1,4 @@
-@import "bootstrap/scss/bootstrap.scss";
-@import 'animate.css';
+@import "../../node_modules/bootstrap/scss/bootstrap.scss";
 @import "../components/Exposure/style.scss";
 
 $theme-colors: (
@@ -19,6 +18,15 @@ body {
   height: 100%;
   background-color: #ffffff;
   font-family: 'Montserrat', sans-serif;
+}
+
+.hero-content {
+  filter: grayscale(1);
+  
+  h1,h2,h3,h4,h5,h6 {
+    color: $light;
+    mix-blend-mode: difference;
+  }
 }
 
 .bg-grey {
